# Black_Swan

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md
.github/workflows/: rust-ci.yml
apps/coordinator/: Cargo.toml
apps/coordinator/examples/: local_signed_packet_demo.rs
apps/coordinator/src/: lib.rs  main.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/consensus/tests/: append_entries_contract.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/security/tests/: trust_gate_contract.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: snapshot_compaction_contract.rs  wal_replay_contract.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
docs/: ARCHITECTURE.md  CONSENSUS.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUNTIME_CONFIG.md  SECURITY_MODEL.md  SNAPSHOT_COMPACTION.md  TESTING.md  WAL_CONTRACT.md
