[workspace]
resolver = "2"
members = [
    "crates/state",
    "crates/security",
    "crates/transport",
    "crates/storage",
    "crates/consensus",
    "crates/scheduler",
    "apps/coordinator"
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
ed25519-dalek = "2.1"
anyhow = "1.0"
bytes = "1.6"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
