[package]
name = "black_swan_transport"
version = "0.1.0"
edition = "2021"

[dependencies]
black_swan_security = { path = "../security" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }

tokio-util = { workspace = true }

futures-util = { version = "0.3", features = ["sink"] }